test/integration/bad/closures/no_keyword5.stan
model {
    void foo_lp(real x) {
        target += x;
    }
}